Fix jump from formula to calculator and add comments

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* #region GENERAL */
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
@@ -5,7 +6,6 @@
 }
 
 html {
-    /* height: 100%; */
     width: 100%;
     background-color: #f5f5f5;
     margin: 0;
@@ -13,7 +13,6 @@ html {
 }
 
 body {
-    /* height: auto; */
     width: 100%;
     margin: 0;
     padding: 0;
@@ -88,6 +87,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
     -moz-appearance: textfield;
 }
+/* #endregion GENERAL */
 
 /* #region HEADER */
 header a {
@@ -361,6 +361,9 @@ button > img {
 .formulas {
     width: 90%;
     align-self: center;
+}
+#formulas-2d {
+    margin-top: 20px;
 }
 hr {
     width: 92%;
